# shelfquery

./: LICENSE  setup.cfg  setup.py
shelfquery/: __init__.py  query.py
