[metadata]
name = shelfquery
version = 3.1.2dev
author = Nitipit Nontasuwan
author_email = nitipit@gmail.com
description = shelfdb query client.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nitipit/shelfquery
keywords = shelfdb database query
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = shelfquery
python_requires = >=3.7
install_requires =
    dill >=0.3.3, <0.4.0